// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 18px;
  cursor: pointer;
}

.c0:hover .sinoui-base-input__clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:hover .sinoui-base-input__endAdornment {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 2px;
}

<div
  className="c0 sinoui-base-input c1"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染不可用的Input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  color: rgba(0,0,0,0.38);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 18px;
  cursor: pointer;
}

.c0:hover .sinoui-base-input__clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:hover .sinoui-base-input__endAdornment {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  color: rgba(0,0,0,0.38);
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c1::before {
  background: transparent;
  background-image: linear-gradient( to right, rgba(0,0,0,0.42) 33%, transparent 0% );
  background-position: left top;
  background-repeat: repeat-x;
  background-size: 5px 1px;
}

<div
  className="c0 sinoui-base-input sinoui-base-input--disabled c1"
  data-testid="baseInput"
  disabled={true}
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染密集模式下的Input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 18px;
  cursor: pointer;
}

.c0:hover .sinoui-base-input__clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:hover .sinoui-base-input__endAdornment {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 2px;
}

<div
  className="c0 sinoui-base-input c1"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染错误状态下的input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 18px;
  cursor: pointer;
}

.c0:hover .sinoui-base-input__clear {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:hover .sinoui-base-input__endAdornment {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c1::after {
  background-color: #f44336;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

<div
  className="c0 sinoui-base-input c1"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;
